[package]
authors = ["Jordan Aceto <jordanaceto@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-ribbon-controller"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32l0xx-hal = { version = "0.10.0", features = ["mcu-STM32L031F4Px", "rt"] }
heapless = "0.7.16"
nb = "1.0.0"

# this lets you use `cargo fix`!
[[bin]]
name = "rust-ribbon-controller"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
opt-level = "z"
