[package]
authors = ["Jordan Aceto <jordanaceto@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-ribbon-controller"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "0.2"
stm32l4xx-hal = { version = "0.7", features = ["stm32l412"] }
heapless = "0.7"
nb = "1"
biquad = "0.4"
synth-utils = { git = "https://github.com/JordanAceto/synth-utils-rs" }
midi-convert = { git = "https://github.com/JordanAceto/midi-convert" }

# this lets you use `cargo fix`!
[[bin]]
name = "rust-ribbon-controller"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
opt-level = "z"
